src/test/resources/test/coco/valid/J1.struct
package test.coco.valid;

struct J1 {
  Z f1;
  test.coco.valid.K1[][][] f3;
}
